fix some errors

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <h2>Calculator</h2>
               <p>
                 This project was design using Html Css & JavaScript. This can be use to calculate
-                arithmetic operations on numbers such as Addition Substracton Multilication and division.
+                arithmetic operations on numbers such as Addition Substracton Multiplication and division.
               </p>
             </div>
             <a href="https://adenike247.github.io/calculator-app/">
@@ -172,7 +172,7 @@
               <h2>Stop Watch</h2>
               <p>
                This StopWatch can be use to switch to different colors,It has different fuctions play, pause, reset 
-               and heartrate!
+               and heart-rate!
               </p>
             </div>
             <a href="https://adenike247.github.io/stopwatch/">
@@ -186,7 +186,7 @@
               <h1>Project 5</h1>
               <h2>Routing</h2>
               <p>
-                This Project is all about how to switch to different page which is routing.The code
+                This Project about how to switch to different page which is routing.The code
                 is written with html css javascript and vue.js!
               </p>
             </div>
@@ -217,7 +217,7 @@
               <h2>Coding is Love</h2>
               <p>
                 Find a Coach this is an Applicatio which has bunch of codes you can contact the coach
-                by leaving an email address.On the Request you can view all incoming request external-message-public-relations-agency-flaticons-lineal-color-flat-icons
+                by leaving an email address.On the Request you can view all incoming request external message.
                 It uses bunch of componets and http!
               </p>
             </div>
@@ -243,7 +243,7 @@
           <h1 class="section-title">About <span>Me</span></h1>
           <h2>Front End Developer</h2>
           <p>
-            Hello! I want to Otain a challenging IT intership where i can
+            Hello! I want to take a challenging IT intership where i can
             use my educational background and specialized trainig to add value to the firm.
              I have knowledge on Html Css Javascript and Vuejs!
           </p>
