--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             <h1>Project 1</h1>
             <h2>Vegan Store</h2>
             <p class="summary">
-              This was my first project as a Frontend Designer working with Html and Css. It is a demo page which consist of seven sections,
+              This was my first project as a Frontend Designer working with Html and Css. It is a demo page which
+              consist of seven sections,
               The header, image, styling of different icons,video,form and more use to shop online. Well responsive!
             </p>
           </div>
@@ -220,12 +221,12 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 7</h1>
-            <h2>ShoppingSite</h2>
+            <h2>Shopping Site</h2>
             <p>
               This Shopping site is use to shop different items and get the cost of the items !
             </p>
           </div>
-          <a href="https://fancy-cocada-9ea6eb.netlify.app/products">
+          <a href="https://shopping-book-site.netlify.app/">
             <div class="project-img">
               <img class="card-img" src="./ShoppingSiteNew.jpeg" alt="img" />
             </div>
@@ -234,7 +235,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 8</h1>
-            <h2>Coding is Love</h2>
+            <h2>Find A Coach</h2>
             <p>
               Find a Coach this is an Application which has bunch of codes you can contact the coach
               by leaving an email address.On the Request you can view all incoming request external message.
@@ -254,7 +255,8 @@
             <h2>Todo Task Application</h2>
             <p>
               A task manager application is a software program that helps Admin organize and manage tasks, to-do
-              lists, projects assign to a team member and re-assign task to another team, delete, edit and monitor task progress. This 
+              lists, projects assign to a team member and re-assign task to another team, delete, edit and monitor task
+              progress. This
               project was built with Html Css Javascript and Reactjs
             </p>
           </div>
