modify some content

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <h2>Calculator</h2>
             <p>
               This project was design using Html Css & JavaScript. This can be use to calculate
-              arithmetic operations on numbers such as Addition Substracton Multiplication and division.
+              arithmetic operations on numbers such as Addition Substraction Multiplication and division.
             </p>
           </div>
           <a href="https://adenike247.github.io/calculator-app/">
@@ -191,7 +191,7 @@
             <h1>Project 5</h1>
             <h2>Stop Watch</h2>
             <p>
-              StopWatch page from a shopping site, you can select different belt colors,It has different fuctions
+              StopWatch page from a shopping site, you can select different belt colors,It has different functions
               play, pause, reset
               and heart-rate!
             </p>
@@ -207,8 +207,8 @@
             <h1>Project 6</h1>
             <h2>Routing</h2>
             <p>
-              This Project about how to switch to different page which is routing.The code
-              is written with html css javascript and vue.js!
+              This Application was my first experience in routing to different page .This was implemented
+              using html css javascript and vue.js!
             </p>
           </div>
 
@@ -223,7 +223,7 @@
             <h1>Project 7</h1>
             <h2>Shopping Site</h2>
             <p>
-              This Shopping site is use to shop different items and get the cost of the items !
+              This is a Shopping site which is use to shop different items and get the cost of the items !
             </p>
           </div>
           <a href="https://shopping-book-site.netlify.app/">
@@ -237,9 +237,8 @@
             <h1>Project 8</h1>
             <h2>Find A Coach</h2>
             <p>
-              Find a Coach this is an Application which has bunch of codes you can contact the coach
-              by leaving an email address.On the Request you can view all incoming request external message.
-              It uses bunch of componets and http!
+              Find a Coach this is an Application reach out to a coach to learn a course .On the Request you can view
+              all incoming request external message!
             </p>
           </div>
           <a href="https://profound-fenglisu-d87d4a.netlify.app/coaches">
@@ -255,9 +254,8 @@
             <h2>Todo Task Application</h2>
             <p>
               A task manager application is a software program that helps Admin organize and manage tasks, to-do
-              lists, projects assign to a team member and re-assign task to another team, delete, edit and monitor task
-              progress. This
-              project was built with Html Css Javascript and Reactjs
+              lists, tasks can be assign to a team member and re-assign task to another team member, delete, edit and monitor task
+              progress. This project was built with Html Css Javascript and Reactjs
             </p>
           </div>
           <a href="https://taskio.netlify.app/">
