modify some content

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
             <h1>Project 5</h1>
             <h2>Stop Watch</h2>
             <p>
-              StopWatch page from a shopping site, you can select different belt colors,It has different functions
+              StopWatch page from a shopping site, stopwatch can be select with different belt color,It has different
+              functions
               play, pause, reset
               and heart-rate!
             </p>
@@ -254,7 +255,8 @@
             <h2>Todo Task Application</h2>
             <p>
               A task manager application is a software program that helps Admin organize and manage tasks, to-do
-              lists, tasks can be assign to a team member and re-assign task to another team member, delete, edit and monitor task
+              lists, tasks can be assign to a team member and re-assign task to another team member, delete, edit and
+              monitor task
               progress. This project was built with Html Css Javascript and Reactjs
             </p>
           </div>
