--- a/index.html
+++ b/index.html
@@ -47,79 +47,6 @@
       </div>
     </div>
   </section>
-  <!-- End Hero Section -->
-  <!-- Service Section -->
-  <!-- <section id="services">
-      <div class="services">
-        <div class="service-top">
-          <h1 class="section-title">Serv<span>i</span>ces</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adpisicing elit. Ipsum
-            deleniti nsiores pariatur assumenda quas magni et, doloribus quod
-            vouptate quasi mollestiae magnam officils dolorum, dolor provident
-            atque molestias voluptatum explicabo!
-          </p>
-        </div>
-        <div class="service-bottom">
-          <div class="service-item">
-            <div class="icon">
-              <i class=" fa-code" ></i>
-            </div>
-            <h2>WEB DESIGN</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adpisicing elit. Ipsum
-              deleniti nsiores pariatur assumenda quas magni et, doloribus quod
-              vouptate quasi mollestiae magnam officils dolorum, dolor provident
-              atque molestias voluptatum explicabo!
-            </p>
-          </div>
-          <div class="service-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-service-car-service-icongeek26-linear-colour-icongeek26.png"
-              />
-            </div>
-            <h2>WEB DESIGN</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adpisicing elit. Ipsum
-              deleniti nsiores pariatur assumenda quas magni et, doloribus quod
-              vouptate quasi mollestiae magnam officils dolorum, dolor provident
-              atque molestias voluptatum explicabo!
-            </p>
-          </div>
-          <div class="service-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-service-car-service-icongeek26-linear-colour-icongeek26.png"
-              />
-            </div>
-            <h2>WEB DESIGN</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adpisicing elit. Ipsum
-              deleniti nsiores pariatur assumenda quas magni et, doloribus quod
-              vouptate quasi mollestiae magnam officils dolorum, dolor provident
-              atque molestias voluptatum explicabo!
-            </p>
-          </div>
-          <div class="service-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-service-car-service-icongeek26-linear-colour-icongeek26.png"
-              />
-            </div>
-            <h2>WEB DESIGN</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adpisicing elit. Ipsum
-              deleniti nsiores pariatur assumenda quas magni et, doloribus quod
-              vouptate quasi mollestiae magnam officils dolorum, dolor provident
-              atque molestias voluptatum explicabo!
-            </p>
-          </div>
-        </div>
-      </div>
-    </section> -->
-  <!-- End Service Section -->
-  <!-- Project Section -->
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -294,7 +221,8 @@
           problem-solving and solution-oriented abilities.
         </p>
 
-        <a href="#" class="cta">DOWNLOAD RESUME</a>
+        <a href="https://www.dropbox.com/s/rgrygd7k36rdxcs/MUSTAPHA%20BARAKAH%20ADENIKE%20CV%20.pdf?dl=0"
+          id="download-resume" class="cta">DOWNLOAD RESUME</a>
       </div>
     </div>
   </section>
@@ -369,7 +297,6 @@
           <a href="https://www.linkedin.com/in/barakah-mustapha-494971242/"><img
               src="https://img.icons8.com/material-outlined/24/null/linkedin--v1.png" /></a>
         </div>
-
       </div>
   </section>
   <!-- End Footer -->
