worked on download resume

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               The header, image, styling of different icons,video,form and more use to shop online. Well responsive!
             </p>
           </div>
-          <a href="https://adenike247.github.io/Vegan-Store/">
+          <a href="https://adenike247.github.io/Vegan-Store/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./VeganStoreNew.jpeg" alt="img" />
             </div>
@@ -77,7 +77,7 @@
               A Netflix clone UI page for desktop view, This involve coding with languages such as HTML, CSS.
             </p>
           </div>
-          <a href="https://netflix-clone-adenike247.netlify.app/">
+          <a href="https://netflix-clone-adenike247.netlify.app/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./Clone Netflix.PNG" alt="img" />
             </div>
@@ -92,7 +92,7 @@
               arithmetic operations on numbers such as Addition Substraction Multiplication and division.
             </p>
           </div>
-          <a href="https://adenike247.github.io/calculator-app/">
+          <a href="https://adenike247.github.io/calculator-app/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./CalculatorNew copy.jpeg" alt="img" />
             </div>
@@ -107,7 +107,7 @@
               Javascript
             </p>
           </div>
-          <a href="https://adenike247.github.io/addList/">
+          <a href="https://adenike247.github.io/addList/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./NoteTabNew.jpeg" alt="img" />
             </div>
@@ -124,7 +124,7 @@
               and heart-rate!
             </p>
           </div>
-          <a href="https://adenike247.github.io/stopwatch/">
+          <a href="https://adenike247.github.io/stopwatch/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./StopWatchNew.jpeg" alt="img" />
             </div>
@@ -140,7 +140,7 @@
             </p>
           </div>
 
-          <a href="https://github.com/Adenike247/prev-next/settings/pages">
+          <a href="https://github.com/Adenike247/prev-next/settings/pages" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./HowToRouteNew.jpeg" alt="img" />
             </div>
@@ -154,7 +154,7 @@
               This is a Shopping site which is use to shop different items and get the cost of the items !
             </p>
           </div>
-          <a href="https://shopping-book-site.netlify.app/">
+          <a href="https://shopping-book-site.netlify.app/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./ShoppingSiteNew.jpeg" alt="img" />
             </div>
@@ -169,7 +169,7 @@
               all incoming request external message!
             </p>
           </div>
-          <a href="https://profound-fenglisu-d87d4a.netlify.app/coaches">
+          <a href="https://profound-fenglisu-d87d4a.netlify.app/coaches" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./FindACoachNew.jpeg" alt="img" />
             </div>
@@ -187,7 +187,7 @@
               progress. This project was built with Html Css Javascript and Reactjs
             </p>
           </div>
-          <a href="https://taskio.netlify.app/">
+          <a href="https://taskio.netlify.app/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./TodoApplication.PNG" alt="img" />
             </div>
@@ -215,14 +215,16 @@
           establishment that I am privilege to work.
           As A hard-working and motivated resource who has achieved skills in Software
           Development using HTML, CSS, BOOTSTRAP, TALWIND CSS, JAVASCRIPT,
-          REACTJS, VUEJS.
-          With over 2 years of industry experience working as a Frontend Web Developer.
-          I endeavor to constantly exceed performance and expectations through demonstrating
-          problem-solving and solution-oriented abilities.
+          REACTJS, VUEJS. <span class="second-content">
+            With over 2 years of industry experience working as a Frontend Web Developer.
+            I endeavor to constantly exceed performance and expectations through demonstrating
+            problem-solving and solution-oriented abilities.
+          </span>
+
         </p>
 
         <a href="https://www.dropbox.com/s/rgrygd7k36rdxcs/MUSTAPHA%20BARAKAH%20ADENIKE%20CV%20.pdf?dl=0"
-          id="download-resume" class="cta">DOWNLOAD RESUME</a>
+          target="_blank" id="download-resume" class="cta">DOWNLOAD RESUME</a>
       </div>
     </div>
   </section>
@@ -279,7 +281,6 @@
       <div class="brand">
         <h1><span>a</span>denike <span>m</span>ustapha</h1>
       </div>
-      <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
         <div class="social-item">
           <a
