--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
           <div class="contact-info">
             <a href="mailto: barakah24777@gmail.com">
               <h1>Email</h1>
-              <h2>barakah24777@gmai.com</h2>
+              <h2>barakah24777@gmail.com</h2>
           </div>
           </a>
         </div>
-        <div class="contact-item">
+        <!-- <div class="contact-item">
           <div class="icon">
             <img src="https://img.icons8.com/color/48/000000/map-marker.png" />
           </div>
@@ -269,7 +269,7 @@
             <h1>Address</h1>
             <h2>Blk 68 flat 3, Low cost housing estate, Agege Lagos.</h2>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
