--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 
         </p>
 
-        <a href="https://www.dropbox.com/s/rgrygd7k36rdxcs/MUSTAPHA%20BARAKAH%20ADENIKE%20CV%20.pdf?dl=0"
-          target="_blank" id="download-resume" class="cta">DOWNLOAD RESUME</a>
+        <a href="https://beige-ericha-25.tiiny.site/" target="_blank" id="download-resume" class="cta">DOWNLOAD
+          RESUME</a>
       </div>
     </div>
   </section>
