--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
             <h1>Project 4</h1>
             <h2>Routing</h2>
             <p>
-              This Application was my first experience in routing to different page .This was implemented
-              using html css javascript and vue.js!
+              This Application was my first experience in routing to different page.
             </p>
           </div>
 
@@ -204,7 +203,7 @@
           establishment that I am privilege to work.
           As A hard-working and motivated resource who has achieved skills in Software
           Development using HTML, CSS, BOOTSTRAP, TALWIND CSS, JAVASCRIPT,
-          REACTJS, VUEJS. <span class="second-content">
+          REACTJS. <span class="second-content">
             With over 2 years of industry experience working as a Frontend Web Developer.
             I endeavor to constantly exceed performance and expectations through demonstrating
             problem-solving and solution-oriented abilities.
