--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./Adenike-image.jpg" alt="img" />
+          <img src="./Job-profile.jpeg" alt="img" />
         </div>
       </div>
       <div class="col-right">
