--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@
 
         </p>
 
-        <a href="https://beige-ericha-25.tiiny.site/" target="_blank" id="download-resume" class="cta">DOWNLOAD
-          RESUME</a>
+      <div class="resume-section">
+          <a href="https://beige-ericha-25.tiiny.site/" target="_blank" id="download-resume" class="cta">DOWNLOAD
+            RESUME</a>
+      </div>
       </div>
     </div>
   </section>
