--- a/index.html
+++ b/index.html
@@ -53,10 +53,25 @@
         <h1 class="section-title">Adenike <span>Projects</span></h1>
       </div>
       <div class="all-projects">
-
         <div class="project-item">
           <div class="project-info">
             <h1>Project 1</h1>
+            <h2>Wood Land</h2>
+            <p>
+              E-commers project ,An Online Shopping site known as woodland with different home interiors
+              for living room, dinning and kitchens. This website was built with Reactjs, Html, Css, API.
+
+            </p>
+          </div>
+          <a href="https://wood-land.netlify.app/" target="_blank">
+            <div class="project-img">
+              <img class="card-img" src="./woodland.png" alt="img" />
+            </div>
+          </a>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Project 2</h1>
             <h2>Todo Task Application</h2>
             <p>
               A task manager application is a software program that helps Admin organize and manage tasks, to-do
@@ -71,54 +86,11 @@
             </div>
           </a>
         </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Shopping Site</h2>
-            <p>
-              This is a Shopping site which is use to shop different items and get the cost of the items !
-            </p>
-          </div>
-          <a href="https://shopping-book-site.netlify.app/" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./ShoppingSiteNew.jpeg" alt="img" />
-            </div>
-          </a>
-        </div>
+
+
         <div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
-            <h2>Find A Coach</h2>
-            <p>
-              Find a Coach this is an Application reach out to a coach to learn a course .On the Request you can view
-              all incoming request external message!
-            </p>
-          </div>
-          <a href="https://profound-fenglisu-d87d4a.netlify.app/coaches" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./FindACoachNew.jpeg" alt="img" />
-            </div>
-          </a>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 4</h1>
-            <h2>Routing</h2>
-            <p>
-              This Application was my first experience in routing to different page.
-            </p>
-          </div>
-
-          <a href="https://github.com/Adenike247/prev-next/settings/pages" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./HowToRouteNew.jpeg" alt="img" />
-            </div>
-          </a>
-        </div>
-
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 5</h1>
             <h2>Calculator</h2>
             <p>
               This project was design using Html Css & JavaScript. This can be use to calculate
@@ -131,24 +103,10 @@
             </div>
           </a>
         </div>
+
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 6</h1>
-            <h2></h2>
-            <p>
-              This project can be use to add different items, edit, save and delete.This was design with Html Css and
-              Javascript
-            </p>
-          </div>
-          <a href="https://adenike247.github.io/addList/" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./NoteTabNew.jpeg" alt="img" />
-            </div>
-          </a>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 7</h1>
+            <h1>Project 4</h1>
             <h2>Stop Watch</h2>
             <p>
               StopWatch page from a shopping site, stopwatch can be select with different belt color,It has different
@@ -166,7 +124,7 @@
 
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 8</h1>
+            <h1>Project 5</h1>
             <h2>Vegan Store</h2>
             <p class="summary">
               This was my first project as a Frontend Designer working with Html and Css. It is a demo page which
@@ -211,10 +169,10 @@
 
         </p>
 
-      <div class="resume-section">
+        <div class="resume-section">
           <a href="https://beige-ericha-25.tiiny.site/" target="_blank" id="download-resume" class="cta">DOWNLOAD
             RESUME</a>
-      </div>
+        </div>
       </div>
     </div>
   </section>
