--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </p>
 
         <div class="resume-section">
-          <a href="https://beige-ericha-25.tiiny.site/" target="_blank" id="download-resume" class="cta">DOWNLOAD
+          <a href="https://drive.google.com/file/d/1k2KV3YcvaVSuToEYmFG3pxJLArRTcIyW/view" target="_blank" id="download-resume" class="cta">DOWNLOAD
             RESUME</a>
         </div>
       </div>
