--- a/index.html
+++ b/index.html
@@ -55,15 +55,13 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
             <h2>Wood Land</h2>
             <p>
-              E-commers project ,An Online Shopping site known as woodland with different home interiors
-              for living room, dinning and kitchens. This website was built with Reactjs, Html, Css, API.
+              E-commers project 
 
             </p>
           </div>
-          <a href="https://wood-land.netlify.app/" target="_blank">
+          <a href="https://wood-land.netlify.app/" >
             <div class="project-img">
               <img class="card-img" src="./woodland.png" alt="img" />
             </div>
@@ -71,70 +69,14 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
             <h2>Todo Task Application</h2>
             <p>
-              A task manager application is a software program that helps Admin organize and manage tasks, to-do
-              lists, tasks can be assign to a team member and re-assign task to another team member, delete, edit and
-              monitor task
-              progress. This project was built with Html Css Javascript and Reactjs
+              A task manager application 
             </p>
           </div>
-          <a href="https://taskio.netlify.app/" target="_blank">
+          <a href="https://taskio.netlify.app/" >
             <div class="project-img">
               <img class="card-img" src="./TodoApplication.PNG" alt="img" />
-            </div>
-          </a>
-        </div>
-
-
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 3</h1>
-            <h2>Calculator</h2>
-            <p>
-              This project was design using Html Css & JavaScript. This can be use to calculate
-              arithmetic operations on numbers such as Addition Substraction Multiplication and division.
-            </p>
-          </div>
-          <a href="https://adenike247.github.io/calculator-app/" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./CalculatorNew copy.jpeg" alt="img" />
-            </div>
-          </a>
-        </div>
-
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 4</h1>
-            <h2>Stop Watch</h2>
-            <p>
-              StopWatch page from a shopping site, stopwatch can be select with different belt color,It has different
-              functions
-              play, pause, reset
-              and heart-rate!
-            </p>
-          </div>
-          <a href="https://adenike247.github.io/stopwatch/" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./StopWatchNew.jpeg" alt="img" />
-            </div>
-          </a>
-        </div>
-
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 5</h1>
-            <h2>Vegan Store</h2>
-            <p class="summary">
-              This was my first project as a Frontend Designer working with Html and Css. It is a demo page which
-              consist of seven sections,
-              The header, image, styling of different icons,video,form and more use to shop online. Well responsive!
-            </p>
-          </div>
-          <a href="https://adenike247.github.io/Vegan-Store/" target="_blank">
-            <div class="project-img">
-              <img class="card-img" src="./VeganStoreNew.jpeg" alt="img" />
             </div>
           </a>
         </div>
