--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             </p>
           </div>
-          <a href="https://wood-land.netlify.app/" >
+          <a href="https://wood-land.netlify.app/" target="_blank" >
             <div class="project-img">
               <img class="card-img" src="./woodland.png" alt="img" />
             </div>
@@ -74,7 +74,7 @@
               A task manager application 
             </p>
           </div>
-          <a href="https://taskio.netlify.app/" >
+          <a href="https://taskio.netlify.app/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./TodoApplication.PNG" alt="img" />
             </div>
@@ -112,7 +112,7 @@
         </p>
 
         <div class="resume-section">
-          <a href="https://drive.google.com/file/d/1k2KV3YcvaVSuToEYmFG3pxJLArRTcIyW/view" target="_blank" id="download-resume" class="cta">DOWNLOAD
+          <a href="https://drive.google.com/file/d/1W4AxBK2sUq9ah3loXprkp7AMUtKVZWlK/view" target="_blank" id="download-resume" class="cta">DOWNLOAD
             RESUME</a>
         </div>
       </div>
