--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </p>
 
         <div class="resume-section">
-          <a href="https://drive.google.com/file/d/1W4AxBK2sUq9ah3loXprkp7AMUtKVZWlK/view" target="_blank" id="download-resume" class="cta">DOWNLOAD
+          <a href="https://drive.google.com/drive/u/0/my-drive" target="_blank" id="download-resume" class="cta">DOWNLOAD
             RESUME</a>
         </div>
       </div>
