--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           <div class="project-info">
             <h2>Wood Land</h2>
             <p>
-              E-commers project 
+              E-commers project
 
             </p>
           </div>
-          <a href="https://wood-land.netlify.app/" target="_blank" >
+          <a href="https://wood-land.netlify.app/" target="_blank">
             <div class="project-img">
               <img class="card-img" src="./woodland.png" alt="img" />
             </div>
@@ -71,7 +71,7 @@
           <div class="project-info">
             <h2>Todo Task Application</h2>
             <p>
-              A task manager application 
+              A task manager application
             </p>
           </div>
           <a href="https://taskio.netlify.app/" target="_blank">
@@ -112,7 +112,8 @@
         </p>
 
         <div class="resume-section">
-          <a href="https://drive.google.com/file/d/1LyUVJ32fOQbyqNKgrBiGYdaJRyIunuiM/view" target="_blank" id="download-resume" class="cta">DOWNLOAD
+          <a href="https://drive.google.com/file/d/1l0OFlUc3uJZkosWSr3-BuGYPUk1x6Xu5/view?usp=drive_link"
+            id="download-resume" class="cta">DOWNLOAD
             RESUME</a>
         </div>
       </div>
