--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./Job-profile.jpeg" alt="img" />
+          <img src="./my-profile.jpg" alt="img" />
         </div>
       </div>
       <div class="col-right">
@@ -112,7 +112,7 @@
         </p>
 
         <div class="resume-section">
-          <a href="https://drive.google.com/file/d/1IqNSmm0FojGsqVKqQTpVri8d-Xzuw6Ux/view?usp=drive_link"
+          <a href="https://drive.google.com/file/d/1Zacn9bFqnB6VUt7ZfA3q9o6u-efxe40E/view?usp=drive_link"
             id="download-resume" class="cta">DOWNLOAD
             RESUME</a>
         </div>
